@@ -1,3 +1,4 @@
+* Use XML id for board action instead of id
 * Add states attribute to notebook
 * Allow to use tuple for Reference
 * Add constant interpolation on line graph
